--- a/index.html
+++ b/index.html
@@ -6,33 +6,39 @@
         <link rel="stylesheet" href="meme-generator.css">
     </head>
     <body>
-        <p>
-            <textarea id="top-text"></textarea>
-            Text size : <input type="range" id="top-text-size-input" min="0.05" max="0.25" value="0.15" step="0.01">
-            Color: <input type="color" id="color-top">
-        </p>
-        <p>
-            <textarea id="bottom-text"></textarea>
-            Text size : <input type="range" id="bottom-text-size-input" min="0.05" max="0.25" value="0.15" step="0.01">
-            Color: <input type="color" id="color-bottom">
-        </p>
-        <p>
-            <select id="font-style">
-                <option value="Arial">Arial</option>
-                <option value="Comic Sans">Comic Sans</option>
-                <option value="Pacifico">Pacifico</option>
-            </select>
-        </p>
-        <p>
-            <input type="file" id="image-input" accept="image/*">
-        </p>
-        <p>
-            <button id="generate-btn">Generate!</button>
-            <a id="download" download="myImage.jpg" href="" onclick="download_img(this);">Download</a>
-        </p>
-        <p>
-            <canvas id="meme-canvas"></canvas>
-        </p>
-        <script src="./meme-generator.js"></script>
+        <div>
+            <p>
+                <textarea cols="25" id="top-text"></textarea>
+                Size:<input type="range" id="top-text-size-input" min="0.05" max="0.25" value="0.15" step="0.01">
+                Color: <input type="color" id="color-top">
+            </p>
+            <p>
+                <textarea cols="25" id="bottom-text"></textarea>
+                Size: <input type="range" id="bottom-text-size-input" min="0.05" max="0.25" value="0.15" step="0.01">
+                Color: <input type="color" id="color-bottom">
+            </p>
+                <div class="divStyle">
+                    <select id="font-style">
+                        <option value="Arial">Arial</option>
+                        <option value="Comic Sans">Comic Sans</option>
+                        <option value="Pacifico">Pacifico</option>
+                    </select>
+                </div>
+                <div class="divStyle">
+                    <input type="file" id="image-input" accept="image/*">
+                </div>
+                <div class="divStyle">
+                    <button id="generate-btn">Generate!</button>                
+                </div>
+                <div class="divStyle">
+                    <button>
+                        <a id="download" download="myImage.jpg" href="" onclick="download_img(this);">Download</a>
+                    </button>
+                </div>
+                <div class="divStyle">        
+                    <canvas id="meme-canvas"></canvas>
+                </div>
+            <script src="./meme-generator.js"></script>
+        </div>
     </body>
 </html>
